--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.15.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.0",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
   },
