--- a/package.json
+++ b/package.json
@@ -1,27 +1,55 @@
 {
-  "name": "winter-camp-2024",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
-  }
+	"name": "winter-camp-2024",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest"
+	},
+	"dependencies": {
+		"next-router-mock": "^0.9.11",
+		"react": "^18",
+		"react-dom": "^18",
+		"swr": "^2.2.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.23.6",
+		"@babel/preset-env": "^7.23.6",
+		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.23.3",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^14.1.2",
+		"@testing-library/user-event": "^14.5.1",
+		"@types/jest": "^29.5.11",
+		"@types/js-yaml": "^4.0.9",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.6",
+		"eslint-plugin-jest-dom": "^5.1.0",
+		"eslint-plugin-testing-library": "^6.2.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"js-yaml": "^4.1.0",
+		"next": "^14.0.4",
+		"postcss": "^8",
+		"tailwindcss": "^3",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5"
+	},
+	"jest": {
+		"testEnvironment": "jest-environment-jsdom",
+		"transform": {
+			"^.+\\.[tj]sx?$": "babel-jest"
+		},
+		"moduleNameMapper": {
+			"\\.(css|less|sass|scss)$": "identity-obj-proxy"
+		},
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$"
+	}
 }
