--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
