--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
