--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
-        "yaml": "^2.3.4"
+        "yaml": "^2.3.4",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@tanstack/eslint-plugin-query": "^5.14.6",
