--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
     "swr": "^2.2.4"
   },
   "devDependencies": {
