--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
+    "node-mocks-http": "^1.14.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "ts-jest": "^29.1.1",
