--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.0",
     "class-validator": "^0.14.0",
     "next": "13.5.6",
     "react": "^18",
@@ -23,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "axios": "^1.6.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
