--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "js-yaml": "^4.1.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
