--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.1",
+    "axios": "^1.6.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
