--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
     "@types/jest": "^29.5.11",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
@@ -28,7 +29,9 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "js-yaml": "^4.1.0",
+    "msw": "^2.0.11",
     "node-mocks-http": "^1.14.0",
     "postcss": "^8",
     "tailwindcss": "^3",
