--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.7",
