--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.7",
