--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.17.1",
     "@types/js-yaml": "^4.0.9",
     "next": "13.5.6",
